# releasechatpublic

./: CMakeLists.txt  README.md  connectiontoserver.cpp  connectiontoserver.hpp  controlmenu.cpp  controlmenu.hpp  controlmenu.ui  databaseconnection.cpp  databaseconnection.hpp  loginform.cpp  loginform.hpp  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  registrationform.cpp  registrationform.hpp  registrationform.ui
